# eq-assign

./: .gitignore  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/types/: trace.ts
demo/: __init__.py  competitor_selection.py  mock_data.py  run_demo.py
traces/: competitor_selection.json
xray/: __init__.py  core.py  serializer.py
